2004-11-30  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* D2X.make: Don't use D2XFolder, because the userdir can now be
	specified in Mac OS 9.  Putting it in the source code folder is
	more convenient.  Turn debugging on.  Don't compile old files,
	compile new ones.  Add the PhysicsFS library.

	* iff/iff.c: Get rid of MIN redefinition.

2004-11-30  Bradley Bell  <btb@icculus.org>

	* .cvsignore, 2d/.cvsignore, 3d/.cvsignore, arch/.cvsignore,
	arch/dos/.cvsignore, arch/ggi/.cvsignore, arch/linux/.cvsignore,
	arch/ogl/.cvsignore, arch/sdl/.cvsignore, arch/svgalib/.cvsignore,
	arch/win32/.cvsignore, debian/.cvsignore, iff/.cvsignore,
	libmve/.cvsignore, main/.cvsignore, main/editor/.cvsignore,
	maths/.cvsignore, mem/.cvsignore, misc/.cvsignore,
	texmap/.cvsignore, utilities/.cvsignore: added stuff to .cvsignore

2004-11-28  Bradley Bell  <btb@icculus.org>

	* arch/sdl/digi.c: kludge to keep from hanging on MinGW

	* arch/sdl/digi.c: use d2src system for persistent sounds

	* arch/sdl/digi.c, main/digi.h: original prototype in d2src is
	wrong, I guess

	* arch/sdl/digi.c, arch/win32/midi.c, main/Makefile.am,
	main/digiobj.c, main/digi.h, main/kludge.c, main/old/digiobj.c:
	ripped object stuff out of digi.c, now using digiobj.c. get rid of
	a bunch of kludges, sound should be more true to original game now

	* acinclude.m4, cygconf: put sdl.m4 in acinclude.m4, to make
	autogen simpler

2004-11-27  Bradley Bell  <btb@icculus.org>

	* main/text.c, main/text.h, main/titles.c: added function to
	properly decode multi-line strings

	* Makefile.am, arch/sdl/digi.c, arch/win32/Makefile.am,
	arch/win32/hmpfile.c, arch/win32/midi.c, main/kludge.c: enabled
	midi on win32

	* main/bm.c, main/polyobj.c: better fix for model data freeing bug

	* main/inferno.c: enable logo screens for shareware/oem

2004-11-26  Bradley Bell  <btb@icculus.org>

	* main/mission.c, main/titles.c: fix d1 briefing glitches

	* main/game.c: free up cpu by not calling timer_delay so many